fix hero slider align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,10 +334,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero {
   width: 100%;
-  height: 70vh;
+  height: 80vh;
   /* background: #3E299E; */
   background: url("../img/bg-hero.png") no-repeat center top ;
   background-size: cover;
+}
+#hero .text-right{
+  text-align: right;
 }
 #hero .container {
   padding-top: 0;
